# Emyrald

./: README.md  emyrald.cabal
src/Emyrald/: Builtins.hs  Error.hs  Eval.hs  Expr.hs  Parse.hs
