name:                emyrald
version:             0.1.0.0
synopsis:            A lightweight functional symbolic language inspired by Scheme and Haskell
license:             GPL-3
license-file:        LICENSE
author:              Dathan Ault-McCoy
copyright:           © 2015 Dathan Ault-McCoy
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Emyrald
                       Emyrald.Error
                       Emyrald.Expr
                       Emyrald.Eval
                       Emyrald.Parse
                       Emyrald.Builtins
  other-extensions:    OverloadedStrings
  build-depends:       base   >=4.7   && <4.8,
                       parsec >=3.1   && <3.2
  hs-source-dirs:      src/
  default-language:    Haskell2010